# nvidia-optix-ray-tracer

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  THIRD_PARTY_NOTICES.md
cache/: .gitignore
docs/: build-guide.md  build-guide_CN.md  compile-sdl.md  compile-sdl_CN.md  compile-vtk.md  compile-vtk_CN.md  configuration.md  configuration_CN.md  install-latest-camke_CN.md  project-introduction.md  project-introduction_CN.md  technical-details.md  usage.md  usage_CN.md
files/: all_data.txt  config.json  particle-short.vtk.series  particle_mesh-short.vtk.series  used_data.txt
include/Global/: DeviceFunctions.cuh  HostFunctions.cuh  Renderer.cuh  RendererImpl.cuh  RendererMesh.cuh  RendererTime.cuh  SDL_D3D11Window.cuh  SDL_D3D12Window.cuh  SDL_GLWindow.cuh  SDL_GraphicsWindow.cuh  SDL_VKWindow.cuh  Shader.cuh  VTKReader.cuh
include/Util/: ColorRamp.cuh  ProgramArgumentParser.cuh  VTKReader.cuh  VTKTimeReader.cuh
lib/SDL2/: compile.txt
lib/SDL2/install/lib/: SDL2_test.lib  SDL2main.lib
lib/SDL2/install/lib/pkgconfig/: sdl2.pc
lib/VTK9.5.0/: compile.txt
lib/VTK9.5.0/install/lib/: vtkChartsCore-9.5.lib  vtkCommonColor-9.5.lib  vtkCommonDataModel-9.5.lib  vtkCommonSystem-9.5.lib  vtkDICOMParser-9.5.lib  vtkFiltersAMR-9.5.lib  vtkFiltersExtraction-9.5.lib  vtkFiltersFlowPaths-9.5.lib  vtkFiltersGeneral-9.5.lib  vtkFiltersGeometry-9.5.lib  vtkFiltersHyperTree-9.5.lib  vtkFiltersPoints-9.5.lib  vtkFiltersProgrammable-9.5.lib  vtkFiltersSelection-9.5.lib  vtkFiltersSources-9.5.lib  vtkFiltersTensor-9.5.lib  vtkFiltersTexture-9.5.lib  vtkFiltersTopology-9.5.lib  vtkIOAsynchronous-9.5.lib  vtkIOCGNSReader-9.5.lib  vtkIOCesium3DTiles-9.5.lib  vtkIOCityGML-9.5.lib  vtkIOCore-9.5.lib  vtkIOERF-9.5.lib  vtkIOEngys-9.5.lib  vtkIOExodus-9.5.lib  vtkIOFDS-9.5.lib  vtkIOFLUENTCFF-9.5.lib  vtkIOGeometry-9.5.lib  vtkIOIOSS-9.5.lib  vtkIOImage-9.5.lib  vtkIOImport-9.5.lib  vtkIOInfovis-9.5.lib  vtkIOMINC-9.5.lib  vtkIOMotionFX-9.5.lib  vtkIONetCDF-9.5.lib  vtkIOOggTheora-9.5.lib  vtkIOParallel-9.5.lib  vtkIOSegY-9.5.lib  vtkIOXML-9.5.lib  (+18 more)
lib/VTK9.5.2/lib/: vtkChartsCore-9.5.lib  vtkCommonComputationalGeometry-9.5.lib  vtkCommonDataModel-9.5.lib  vtkCommonExecutionModel-9.5.lib  vtkCommonMath-9.5.lib  vtkCommonMisc-9.5.lib  vtkCommonTransforms-9.5.lib  vtkDomainsChemistry-9.5.lib  vtkDomainsChemistryOpenGL2-9.5.lib  vtkFiltersCellGrid-9.5.lib  vtkFiltersCore-9.5.lib  vtkFiltersGeneric-9.5.lib  vtkFiltersGeometryPreview-9.5.lib  vtkFiltersHybrid-9.5.lib  vtkFiltersImaging-9.5.lib  vtkFiltersModeling-9.5.lib  vtkFiltersParallel-9.5.lib  vtkFiltersParallelImaging-9.5.lib  vtkFiltersReduction-9.5.lib  vtkFiltersSMP-9.5.lib  vtkFiltersStatistics-9.5.lib  vtkFiltersTemporal-9.5.lib  vtkFiltersVerdict-9.5.lib  vtkGeovisCore-9.5.lib  vtkIOAMR-9.5.lib  vtkIOCONVERGECFD-9.5.lib  vtkIOCellGrid-9.5.lib  vtkIOChemistry-9.5.lib  vtkIOEnSight-9.5.lib  vtkIOExport-9.5.lib  vtkIOExportGL2PS-9.5.lib  vtkIOExportPDF-9.5.lib  vtkIOHDF-9.5.lib  vtkIOLANLX3D-9.5.lib  vtkIOLSDyna-9.5.lib  vtkIOLegacy-9.5.lib  vtkIOMovie-9.5.lib  vtkIOPLY-9.5.lib  vtkIOParallelXML-9.5.lib  vtkIOSQL-9.5.lib  (+60 more)
lib/VTK9.5.2/lib/cmake/vtk-9.5/: VTK-targets-release.cmake  VTK-targets.cmake  VTK-vtk-module-properties.cmake  vtk-config.cmake
shader/: Shader.cu  Shader.ptx
src/D3D11/: D3D11PixelShader.hlsl  D3D11VertexShader.hlsl
src/Global/: HostFunctions.cu  Main.cu  Renderer.cu  RendererImpl.cu  RendererMesh.cu  RendererTime.cu  SDL_D3D11Window.cu  SDL_D3D12Window.cu  SDL_GLWindow.cu  SDL_GraphicsWindow.cu  SDL_VKWindow.cu  VTKReader.cu
src/Util/: ProgramArgumentParser.cu  VTKMeshReader.cu  VTKReader.cu  VTKReaderImpl.cpp  VTKTimeReader.cu
